@@ -1,3 +1,9 @@
+2012-12-19  Sergio Martin <sergio.martin@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Added new function to update 
+	replicated events (enterprise feature) and fix some little
+	bugs
+
 2012-12-17  Sancho Lerena <slerena@artica.es>
 
 	* util/pandora_db.pl: Added feature to delete
